--- a/docs/sop/other/20240905-start.md
+++ b/docs/sop/other/20240905-start.md
@@ -1,8 +1,12 @@
 ---
-title: 新的开始
-description: 暂无
+title: 开篇之作
+description: 开篇之作
 tag:
  - 其它
 ---
 
-## 新的开始
+## 博客说明
+
+- 博客使用 [@sugarat/theme](https://theme.sugarat.top/) 搭建
+- 博客部署在 [cloudflare Pages](https://www.cloudflare-cn.com/) 上
+- 使用百度统计，参考文章[链接](https://blog.csdn.net/hjingfeng/article/details/135763120)
