add关于作者&update开篇之作

--- a/docs/sop/other/20240905-start.md
+++ b/docs/sop/other/20240905-start.md
@@ -10,4 +10,5 @@ tag:
 
 - 博客使用 [@sugarat/theme](https://theme.sugarat.top/) 搭建
 - 博客部署在 [cloudflare Pages](https://www.cloudflare-cn.com/) 上
+  - 时区设置：TZ：Asia/Shanghai
 - 使用百度统计，参考文章[链接](https://blog.csdn.net/hjingfeng/article/details/135763120)
